--- a/src/predictions_ms/Dockerfile
+++ b/src/predictions_ms/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /predictions_ms
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-COPY . .
+COPY . .  --exclude=venv/
 
 CMD [ "python", "app.py"]
 
