--- a/src/predictions_ms/Dockerfile
+++ b/src/predictions_ms/Dockerfile
@@ -1,12 +1,11 @@
 FROM python:3.9
-
 WORKDIR /predictions_ms
 
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-COPY . .  --exclude=venv/
+COPY . .
 
-CMD [ "python", "app.py"]
+CMD ["python", "app.py"]
 
 EXPOSE 8010
