--- a/src/users_ms/config.json
+++ b/src/users_ms/config.json
@@ -5,5 +5,6 @@
     "API_BASE_URL": "/internal/api",
     "API_KEY_HEADER": "api-Key",
     "APP_PORT": 8020,
-    "APP_HOST": "0.0.0.0"
+    "APP_HOST": "0.0.0.0",
+    "DB_HOST": "127.0.0.1"
 }
